--- a/advent-of-code-y2021.cabal
+++ b/advent-of-code-y2021.cabal
@@ -26,6 +26,7 @@ source-repository head
 library
   exposed-modules:
       Consumption
+      LifeSupport
       Position
       PositionAimed
   other-modules:
